# gpothos-generator

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
scripts/: install.js
src/: config.rs  main.rs  scanner.rs
src/generator/: enums.rs  filters.rs  helpers.rs  inputs.rs  mod.rs  models.rs  relations.rs
src/generator/resolvers/: aggregate.rs  create_many.rs  create_one.rs  find_many.rs  find_unique.rs  mod.rs  relations.rs  update_one.rs
src/parser/: mod.rs
