[package]
name = "prisma-pothos-generator"
version = "0.1.0"
edition = "2021"
description = "Generate Pothos GraphQL code from Prisma schema"
authors = ["gpaulo"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization (for Prisma generator protocol)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

[[bin]]
name = "prisma-pothos-generator"
path = "src/main.rs"
